# JSInterp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  generate.sh  main.cpp  modify.sh
Tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  Tests.cpp  main.cpp  test.js
Tests/TestFiles/declarations/function/: 01.ast  02.ast  03.ast  04.ast
Tests/TestFiles/declarations/var/: 01.ast  02.ast  03.ast  04.ast
Tests/TestFiles/expressions/array/: 01.ast  01.js  02.ast  02.js  03.ast  03.js
Tests/TestFiles/expressions/assignment/: 01.ast  02.ast  02.js  03.ast  03.js
Tests/TestFiles/expressions/binary/: 01.ast  01.js  02.ast  02.js  03.ast  03.js
Tests/TestFiles/expressions/member/: 01.ast  01.js  02.ast  02.js  03.ast  03.js
Tests/TestFiles/expressions/object/: 01.ast
Tests/TestFiles/expressions/relation/: 01.ast  02.ast  03.ast
Tests/TestFiles/expressions/unary/: 01.ast  02.ast
Tests/TestFiles/statements/block/: 01.ast  02.ast  02.js  03.ast
Tests/TestFiles/statements/break/: 01.ast  02.ast
Tests/TestFiles/statements/continue/: 01.ast  01.js
Tests/TestFiles/statements/if/: 01.ast  02.ast  03.ast  04.ast
Tests/TestFiles/statements/return/: 01.ast  01.js  02.ast  02.js  03.ast  03.js  04.ast  04.js
Tests/TestFiles/statements/while/: 01.ast  01.js  02.ast  02.js  03.ast  03.js  04.ast  04.js
example/: test.js
grammar/: JavaScriptLexer.g4  JavaScriptParser.g4
src/: main.cpp
src/Ast/: AstBase.h  AstNodes.cpp  AstNodes.h  AstVisitor.cpp  AstVisitor.h  Constants.h
src/AstTree/: AstBase.h  AstNodes.cpp  AstNodes.h  AstVisitor.cpp  AstVisitor.h  BaseAst.h  Utils.cpp
src/JavaScriptVisitor/: JavaScriptParserBaseVisitor.cpp  JavaScriptParserBaseVisitor.h
